--- a/README
+++ b/README
@@ -52,6 +52,14 @@ will pick up on any .coveragerc file in your project. A new report will only
 run when all items are being tested. Partial coverage reports are not yet
 supported.
 
+Base Test Classes
+=================
+
+autotest.base contains useful base classes which can help you write tests for django.
+The functionality includes getObj for getting objects of a certain type. assertGet/Post
+for making requests with status checking and forum error checking. As well as client
+and user management functions.
+
 Video
 =====
 
